--- a/public/signup.html
+++ b/public/signup.html
@@ -17,7 +17,7 @@
     </header>
     <div class="formContainer">
       <form class="formDetails" action="/signup" method="post">
-        <h2>Register Account Form</h2>
+        <h2>Sign Up</h2>
         <div class="formRow">
           <label for="username">Username</label>
           <input
