--- a/public/signup.html
+++ b/public/signup.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/81c816aea5.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/png" href="./assets/icon.png" />
     <link rel="stylesheet" href="./styles/signup.css" />
-    <title>Reddit Sign Up</title>
+    <title>Reddit | Sign Up</title>
   </head>
   <body>
     <header>
@@ -59,11 +59,11 @@
         <div class="button">
           <input
             type="submit"
-            name="register"
             class="signup"
             value="Sign Up"
           />
         </div>
+        <a class="goSignin" href="login.html">Already have an account? Login</a>
       </form>
     </div>
   </body>
